<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/login_layout_left_width"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/login_layout_left_left_margin"
    android:background="#00000000" >

    <LinearLayout
        android:id="@+id/password_framelayout_get"
        android:layout_width="@dimen/login_layout_left_content_width"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/login_layout_left_title_top_margin"
        android:background="#00000000"
        android:gravity="center_horizontal"
        android:orientation="vertical" 
        android:visibility="gone" >

        <TextView
            android:id="@+id/password_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_text_lostpwd"
            android:textColor="@color/text_normal_color"
            android:textSize="@dimen/size_max_normal"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/password_layout_left_title_top_margin"
            android:background="#00000000"
            android:gravity="center"
            android:orientation="vertical" >
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_mobile_height"
                android:background="@color/edit_bk_color"
                android:orientation="horizontal" >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/password_edit_img_left_right_margin"
                    android:layout_marginRight="@dimen/password_edit_img_left_right_margin"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/img_mobile" />
                <EditText
	                android:id="@+id/password_edit_mobile"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:background="@null"
	                android:hint="@string/login_text_mobile_hint"
	                android:gravity="center_vertical"
	                android:inputType="number"
	                android:singleLine="true"
	                android:textColor="@color/text_black_color_53"
	                android:textSize="@dimen/size_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_mobile_height"
                android:layout_marginTop="@dimen/login_layout_left_content_inner_margin"
                android:orientation="horizontal" >
                
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/edit_bk_color"
                    android:orientation="horizontal" >
                    <ImageView
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginLeft="@dimen/password_edit_img_left_right_margin"
	                    android:layout_marginRight="@dimen/password_edit_img_left_right_margin"
	                    android:background="@null"
	                    android:layout_gravity="center_vertical"
	                    android:src="@drawable/img_vericode" />
                    <EditText
	                    android:id="@+id/password_edit_vericode"
	                    android:layout_width="match_parent"
	                    android:layout_height="match_parent"
	                    android:background="@null"
	                    android:gravity="center_vertical"
	                    android:hint="@string/login_text_vericode_hint"
	                    android:inputType="number"
	                    android:singleLine="true"
	                    android:textColor="@color/text_black_color_53"
	                    android:textSize="@dimen/size_normal" />
                </LinearLayout>

                <Button
                    android:id="@+id/password_btn_vericode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/login_text_get_vericode"
                    android:textSize="@dimen/size_max_normal"
                    android:textColor="@drawable/selector_text_vericode"
                    android:background="@drawable/selector_btn_vericode" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/password_btn_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_mobile_height"
            android:layout_marginTop="@dimen/login_layout_left_content_margin"
            android:enabled="false"
            android:text="@string/password_text_next"
            android:textSize="@dimen/size_max_normal"
            android:textColor="@drawable/selector_text_login"
            android:background="@drawable/selector_btn_login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_framelayout_modify"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/login_layout_left_title_top_margin"
        android:layout_gravity="center"
        android:background="#00000000"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_text_set_new_password"
            android:textColor="@color/text_normal_color"
            android:textSize="@dimen/size_max_normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/password_layout_left_title_top_margin"
            android:background="#00000000"
            android:orientation="vertical" >
            
            <LinearLayout
                android:layout_width="@dimen/login_layout_left_content_width"
                android:layout_height="@dimen/login_edit_mobile_height"
                android:background="@color/edit_bk_color"
                android:orientation="horizontal" >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/password_edit_img_left_right_margin"
                    android:layout_marginRight="@dimen/password_edit_img_left_right_margin"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/img_password" />
                <EditText
	                android:id="@+id/password_edit_password"
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1"
	                android:gravity="center_vertical"
	                android:background="@null"
	                android:hint="@string/login_text_new_password_hint"
	                android:inputType="textPassword"
	                android:singleLine="true"
	                android:textColor="@color/text_black_color_53"
	                android:textSize="@dimen/size_max_normal" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="@dimen/login_layout_left_content_width"
                android:layout_height="@dimen/login_edit_mobile_height"
                android:background="@color/edit_bk_color"
                android:layout_marginTop="@dimen/password_hint_to_content_margin"
                android:orientation="horizontal" >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/password_edit_img_left_right_margin"
                    android:layout_marginRight="@dimen/password_edit_img_left_right_margin"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/img_password" />
                <EditText
	                android:id="@+id/password_edit_password_affirm"
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1"
	                android:gravity="center_vertical"
	                android:background="@null"
	                android:hint="@string/login_text_new_password_again_hint"
	                android:inputType="textPassword"
	                android:singleLine="true"
	                android:textColor="@color/text_black_color_53"
	                android:textSize="@dimen/size_max_normal" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/password_hint_to_content_margin"
                android:text="@string/login_text_new_password_tip"
                android:textColor="@color/text_gray_color_7a"
                android:textSize="@dimen/size_mid_normal" />
        </LinearLayout>

        <Button
            android:id="@+id/password_btn_modify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_mobile_height"
            android:layout_marginTop="@dimen/password_hint_to_content_margin"
            android:text="@string/password_text_confirm_modify"
            android:textSize="@dimen/size_x_max_normal"
            android:textColor="@drawable/selector_text_login"
            android:background="@drawable/selector_btn_login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_framelayout_ok"
        android:layout_width="@dimen/login_layout_left_content_width"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/login_layout_left_title_top_margin"
        android:layout_gravity="center"
        android:background="#00000000"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/password_ok_content_margin"
            android:background="#00000000"
            android:src="@drawable/img_success" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/password_ok_content_margin"
            android:gravity="center"
            android:text="@string/password_text_set_success"
            android:textColor="@color/text_normal_color"
            android:textSize="@dimen/size_normal" />

        <Button
            android:id="@+id/password_btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_mobile_height"
            android:layout_marginTop="@dimen/password_ok_content_margin"
            android:text="@string/password_text_direct_login"
            android:textSize="@dimen/size_max_normal"
            android:textColor="@drawable/selector_text_login"
            android:background="@drawable/selector_btn_login" />
    </LinearLayout>

</RelativeLayout>